# tilings

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.client  Dockerfile.client.dockerignore  Dockerfile.server  Dockerfile.server.dockerignore  build  goose  push  run  start-client  start-client.sh  start-server  start-server.sh  test  tilings.yaml
common/: Cargo.toml
common/src/: lib.rs
db/: README.md  dbconf.yml  goose  init.sql
db/migrations/: 00100_Release.sql  00101_AddBaseTables.sql  00102_AddAtlasTables.sql  00103_AddLabels.sql
geometry/: Cargo.toml
geometry/src/: affine.rs  euclid.rs  interval.rs  lib.rs  point.rs  transform.rs
nginx/: .gitignore  nginx.conf  nginx.conf.template
rust/: Cargo.toml  tilings.yaml
rust/client/: Cargo.toml  build.rs
rust/client/atlas/: Cargo.toml
rust/client/atlas/src/: atlas.rs  lib.rs  patch.rs
rust/client/canvas/: Cargo.toml
rust/client/canvas/src/: lib.rs
rust/client/common/: Cargo.toml
rust/client/console/: Cargo.toml
rust/client/console/src/: lib.rs
rust/client/geometry/: Cargo.toml
rust/client/geometry/src/: bounds.rs  edge.rs  lib.rs  point.rs
rust/client/patch/: Cargo.toml
rust/client/patch/src/: lib.rs
rust/client/pmr_quad_tree/: Cargo.toml
rust/client/pmr_quad_tree/src/: lib.rs
rust/client/src/: coloring.rs  lib.rs  routes.rs
rust/client/tile/: Cargo.toml
rust/client/tile/src/: lib.rs
rust/client/tiling/: Cargo.toml  build.rs
rust/client/tiling-config/src/: lib.rs
rust/client/tiling/src/: lib.rs  patch.rs
rust/client/wasm/src/: wasm.rs
rust/geometry/src/: affine.rs  lib.rs  point.rs
rust/server/: .gitignore  Cargo.toml  README.md  cred  diesel.toml  init.sql
rust/server/api/: Cargo.toml
rust/server/api/src/: account.rs  atlas.rs  common.rs  health_check.rs  labels.rs  lib.rs  polygon.rs  search.rs  tiling.rs  tiling_type.rs
rust/server/auth/: Cargo.toml
rust/server/auth/src/: lib.rs
rust/server/db_conn/: Cargo.toml
rust/server/migrations/2021-06-08-103107_create_base_tables/: down.sql  up.sql
rust/server/migrations/2021-06-08-103142_create_atlas_tables/: down.sql  up.sql
rust/server/migrations/2021-06-08-103215_insert_labels/: down.sql  up.sql
rust/server/migrations/2021-06-15-195311_establish_tiling_inheritance/: down.sql  up.sql
rust/server/migrations/2021-06-18-202133_add_roles_and_users/: down.sql  up.sql
rust/server/migrations/2021-06-21-200339_add_table_locks/: down.sql  up.sql
rust/server/migrations/2021-06-21-212203_add_api_key/: down.sql  up.sql
rust/server/migrations/2021-06-23-074203_add_parity_to_atlas_edge/: down.sql  up.sql
rust/server/migrations/2021-06-23-150224_drop_atlas_vertex_title_column/: down.sql  up.sql
rust/server/migrations/2021-06-27-081903_add_tiling_title_unique_constraint/: down.sql  up.sql
rust/server/migrations/2021-07-01-001220_add_neighbor_edge_id_to_atlas_edge/: down.sql  up.sql
rust/server/migrations/2021-07-01-080218_add_account_verification/: down.sql  up.sql
rust/server/migrations/2021-07-02-050912_add_ownership/: down.sql  up.sql
rust/server/migrations/2021-07-10-001453_add_some_star_polygons/: down.sql  up.sql
rust/server/migrations/2021-08-05-013755_add_password_reset/: down.sql  up.sql
rust/server/models/: Cargo.toml
rust/server/models/src/: account.rs  api_key.rs  atlas.rs  lib.rs  polygon.rs  search.rs  tables.rs  tiling.rs
rust/server/queries/: Cargo.toml
rust/server/queries/src/: account.rs  labels.rs  polygon.rs  search.rs
rust/server/rate_limiter/: Cargo.toml
rust/server/rate_limiter/src/: lib.rs
rust/server/result/: Cargo.toml
rust/server/result/src/: lib.rs
rust/server/schema/: Cargo.toml
rust/server/schema/src/: lib.rs  schema.rs
rust/server/src/: api.rs  auth.rs  connection.rs  main.rs  models.rs  queries.rs  response.rs  result.rs  schema.rs
rust/server/src/api/: account.rs  admin.rs  atlas.rs  common.rs  labels.rs  polygon.rs  search.rs  tiling.rs  tiling_type.rs
rust/server/src/models/: api_key.rs  atlas.rs  polygon.rs  search.rs  tables.rs  tiling.rs
rust/server/src/queries/: account.rs  labels.rs  polygon.rs  search.rs  tiling.rs
rust/tile/src/: lib.rs
rust/tiling/: build.rs
rust/tiling-config/: Cargo.toml
rust/tiling/src/: tilings.rs
rust/wasm/src/: lib.rs
simulation/: Cargo.toml
simulation/src/: lib.rs  simulation.rs
src/: common.rs  interval.rs  lib.rs  main.rs  patch.rs  simulation.rs  tile.rs  tiling.rs  tilings.rs
src/tiling/: vertex_rules.rs
src/tiling/edge_rules/: tiling.rs
src/tiling/vertex_rules/: tiling.rs  tilings.rs
tile/: Cargo.toml
tiling/: Cargo.toml  build.rs
tiling-config/: Cargo.toml
tiling-config/src/: lib.rs
tiling/src/: lib.rs  patch.rs  tile.rs  tiling.rs  tilings.rs
tilings/: Cargo.toml
tilings/src/: custom.rs  lib.rs  one_uniform.rs  regular_star.rs  two_uniform.rs
wasm/: Cargo.toml
wasm/src/: coloring.rs  lib.rs  tilings.rs  wasm.rs
www/: .babelrc  bootstrap.js  index.html  index.js  package.json  tsconfig.json  webpack.config.js
www/public/: index.html
www/src/: index.tsx  styles.module.scss  utils.ts
www/src/app/: canvas.tsx  index.tsx  styles.module.scss  tilings.tsx
www/src/app/account/: context.tsx  index.ts  routes.ts  use-is-signed-in.ts
www/src/app/home/: index.tsx  tilings.tsx
www/src/app/nav/: index.tsx  item-props.ts  items.ts  routes.ts
www/src/app/play/: index.ts  play.tsx  routes.ts  styles.module.scss
www/src/app/random/: index.ts  random.tsx  routes.ts  styles.module.scss
www/src/app/reset-password/: index.ts  reset-password.tsx  routes.ts  styles.module.scss
www/src/app/sign-in/: index.ts  routes.ts  sign-in.tsx  styles.module.scss
www/src/app/sign-out/: index.ts  routes.ts  sign-out.tsx
www/src/app/sign-up/: index.ts  routes.ts  sign-up.tsx
www/src/components/: index.ts  item.tsx
www/src/components/canvas/: index.tsx  styles.module.scss  utils.js
www/src/types/: account.d.ts  util.d.ts
www/src/util/: input.ts
www/src/utils/: device.tsx  global-id.ts  index.ts  input.ts  routes.tsx  style.ts  validation.ts
(+24 files in other folders)
