[package]
name = "cellular-automata"
version = "0.1.0"
authors = ["Trey Lowerison <19714082+tlowerison@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
float-cmp = "0.8.0"
itertools = "0.10.0"
nohash-hasher = "0.2.0"
rayon = "1.3.0"
