[package]
name = "cellular-automata"
version = "0.1.0"
authors = ["Trey Lowerison <19714082+tlowerison@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colourado = "0.2.0"
console_error_panic_hook = "0.1.6"
float-cmp = "0.8.0"
rand = { version = "0.6.5", features = ["wasm-bindgen"] }
itertools = "0.10.0"
nohash-hasher = "0.2.0"
plotters = "0.3.0"
plotters-canvas = "0.3.0"
rayon = "1.3.0"
wasm-bindgen = "0.2.74"
web-sys = "0.3.51"

[lib]
crate-type = ["cdylib", "rlib"]
