[package]
name = "tiling"
version = "0.1.0"
authors = ["Trey Lowerison <19714082+tlowerison@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
float-cmp = "0.8.0"
geometry = { path = "../geometry" }
indexmap = "1.6.2"
itertools = "0.10.0"
rmp-serde = "0.15.4"
serde = { version = "1.0", features = ["derive"] }
tile = { path = "../tile" }
tiling-config = { path = "../tiling-config" }

[build-dependencies]
rmp-serde = "0.15.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.17"
tiling-config = { path = "../tiling-config" }
