[package]
name = "tilings"
version = "0.1.0"
authors = ["Trey Lowerison <19714082+tlowerison@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiling = { path = "../tiling" }
