[package]
name = "wasm"
version = "0.1.0"
authors = ["Trey Lowerison <19714082+tlowerison@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colourado = "0.2.0"
common = { path = "../common" }
console_error_panic_hook = "0.1.6"
geometry = { path = "../geometry" }
itertools = "0.10.0"
js-sys = "0.3.51"
plotters = "0.3.0"
plotters-canvas = "0.3.0"
rand = { version = "0.6.5", features = ["wasm-bindgen"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiling = { path = "../tiling" }
wasm-bindgen = "0.2.74"
web-sys = "0.3.51"

[lib]
crate-type = ["cdylib", "rlib"]
