[package]
name = "client"
version = "0.2.7"
authors = ["Trey Lowerison <19714082+tlowerison@users.noreply.github.com>"]
edition = "2018"

[dependencies]
atlas = { path = "./atlas" }
colourado = "0.2.0"
common = { path = "./common" }
console_error_panic_hook = "0.1.6"
geometry = { path = "./geometry" }
itertools = "0.10.0"
js-sys = "0.3.51"
lazy_static = "1.4.0"
models = { path = "../server/models" }
paste = "1.0.5"
percent-encoding = "2.1.0"
plotters = "0.3.0"
plotters-canvas = "0.3.0"
pmr_quad_tree = { path = "./pmr_quad_tree" }
rand = { version = "0.6.5", features = ["wasm-bindgen"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
tile = { path = "./tile" }
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.24"

[dependencies.web-sys]
version = "0.3.51"
features = [
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
]

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]
