[package]
name = "server"
version = "0.1.5"
authors = ["Trey Lowerison <19714082+tlowerison@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.8.0", features = ["attributes"] }
chrono = { version = "0.4.19", features = ["clock"] }
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
diesel_migrations = "1.4.0"
http-types = "2.11.1"
itertools = "0.10.1"
jsonwebtoken = "7.2.0"
lazy_static = "1.4.0"
mashup = "0.1"
rand = "0.8.4"
redis = { version = "*", features = ["r2d2"] }
r2d2_redis = "0.14.0"
regex = "1.5.4"
rocket = { version = "0.5.0-rc.1", features = ["json", "secrets"] }
rust-argon2 = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
validator = { version = "0.13.0" }

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["diesel_postgres_pool"]
