[package]
name = "tiling-config"
version = "0.1.0"
authors = ["Trey Lowerison <19714082+tlowerison@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
geometry = { path = "../geometry" }
itertools = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
tile = { path = "../tile" }
