[package]
name = "canvas"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geometry = { path = "../geometry" }
plotters = "0.3.0"
plotters-backend = "0.3.0"
pmr_quad_tree = { path = "../pmr_quad_tree" }
tile = { path = "../tile" }
