[package]
name = "pmr_quad_tree"
version = "0.2.9"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
float-cmp = "0.8.0"
geometry = { path = "../geometry" }

[dev-dependencies]
tile = { path = "../tile" }
