[package]
name = "tiling"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atlas = { path = "../atlas" }
canvas = { path = "../canvas" }
geometry = { path = "../geometry" }
patch = { path = "../patch" }
plotters = "0.3.0"
pmr_quad_tree = { path = "../pmr_quad_tree" }
tile = { path = "../tile" }
wasm-bindgen = "0.2.74"
web-sys = "0.3.51"
