[package]
name = "api"
version = "0.2.3"
authors = ["Trey Lowerison <19714082+tlowerison@users.noreply.github.com>"]
edition = "2018"

[dependencies]
async-std = { version = "1.8.0", features = ["attributes"] }
auth = { path = "../auth" }
futures = "0.3.15"
db_conn = { path = "../db_conn" }
lazy_static = "1.4.0"
lettre = "0.10.0-rc.3"
models = { path = "../models" }
queries = { path = "../queries" }
percent-encoding = "2.1.0"
r2d2_redis = "0.14.0"
rand = "0.8.4"
result = { path = "../result" }
rocket = { version = "0.5.0-rc.1", features = ["json", "secrets"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
