[package]
name = "auth"
version = "0.2.2"
authors = ["Trey Lowerison <19714082+tlowerison@users.noreply.github.com>"]
edition = "2018"

[dependencies]
async-std = { version = "1.8.0", features = ["attributes"] }
base64 = "0.13.0"
db_conn = { path = "../db_conn" }
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
lazy_static = "1.4.0"
models = { path = "../models" }
r2d2_redis = "0.14.0"
result = { path = "../result" }
rocket = { version = "0.5.0-rc.1", features = ["secrets"] }
rust-argon2 = "0.8.3"
schema = { path = "../schema" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["diesel_postgres_pool"]
