[package]
name = "models"
version = "0.1.0"
authors = ["Trey Lowerison <19714082+tlowerison@users.noreply.github.com>"]
edition = "2018"

[dependencies]
async-std = { version = "1.8.0", features = ["attributes"] }
diesel = { version = "1.4.4" }
itertools = "0.10.1"
mashup = "0.1"
result = { path = "../result" }
rocket = { version = "0.5.0-rc.1" }
schema = { path = "../schema" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
