[package]
name = "result"
version = "0.2.5"
authors = ["Trey Lowerison <19714082+tlowerison@users.noreply.github.com>"]
edition = "2018"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
paste = "1.0.5"
r2d2_redis = "0.14.0"
rocket = { version = "0.5.0-rc.1", features = ["json", "secrets"] }
